--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,19 +1,22 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/carWashDB
-spring.datasource.username= postgres
-spring.datasource.password= 0000
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=0000
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
 
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
+spring.flyway.user=postgres
+spring.flyway.password=0000
+spring.flyway.schemas=public
 
 # App Properties
-bezkoder.app.jwtSecret= carWashSecretKey
-#bezkoder.app.jwtExpirationMs= 3600000
-#bezkoder.app.jwtRefreshExpirationMs= 86400000
+carwash.app.jwtSecret= carWashSecretKey
+#carwash.app.jwtExpirationMs= 3600000
+#carwash.app.jwtRefreshExpirationMs= 86400000
 
-## For test
-bezkoder.app.jwtExpirationMs= 60000
-bezkoder.app.jwtRefreshExpirationMs= 120000
+## For test 6 min for refresh token
+carwash.app.jwtExpirationMs= 360000
+carwash.app.jwtRefreshExpirationMs= 36000000
+
