--- a/site/package.json
+++ b/site/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.2",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.0.5",
     "mobx-react-lite": "^3.1.7",
@@ -24,6 +26,9 @@
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "rsuite": "^5.34.1",
+    "socket.io-client": "^4.7.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
