--- a/site/package.json
+++ b/site/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.11.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
