--- a/site/.env
+++ b/site/.env
@@ -1,2 +1,4 @@
-REACT_APP_API_URL='http://0.0.0.0:9090/'
+REACT_APP_API_URL1='http://0.0.0.0:8080/'
+
+REACT_APP_API_URL='http://localhost:9090/'
 REACT_APP_API_URL2='http://192.168.1.22:8080/'
